--- a/src/css/inicio.css
+++ b/src/css/inicio.css
@@ -487,6 +487,7 @@ nav a:hover{
     }
 
     #box-valores {
+        width: 350px;
         font-size: 14px;
         text-align: center;
         h2 {
